<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tvLearnMoreBreedName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="BreedName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.071" />

    <ImageView
        android:id="@+id/ivLearnMore"
        android:layout_width="317dp"
        android:layout_height="318dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvLearnMoreBreedName"
        tools:srcCompat="@tools:sample/avatars"
        android:contentDescription="@string/a_picture_of_the_dog" />

    <TextView
        android:id="@+id/tvLearnMoreBredFor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/learnmore_bred_for_tv_label"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivLearnMore"
        app:layout_constraintVertical_bias="0.07" />

    <TextView
        android:id="@+id/tvLearnMoreBreedGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/learnmore_breed_group_tv_label"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvLearnMoreBredFor"
        app:layout_constraintVertical_bias="0.07" />

    <TextView
        android:id="@+id/tvLearnMoreLifeSpan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/learnmore_life_span_tv_label"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvLearnMoreBreedGroup"
        app:layout_constraintVertical_bias="0.069" />

    <TextView
        android:id="@+id/tvLearnMoreTemperament"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/learnmore_temperament_tv_label"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvLearnMoreLifeSpan"
        app:layout_constraintVertical_bias="0.086" />

    <TextView
        android:id="@+id/tvLearnMoreOrigin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/learnmore_origin_tv_label"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvLearnMoreTemperament"
        app:layout_constraintVertical_bias="0.136" />
</androidx.constraintlayout.widget.ConstraintLayout>